--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,12 @@ Flask-SQLAlchemy==2.1
 Jinja2==2.8
 MarkupSafe==0.23
 SQLAlchemy==1.0.14
+Tempita==0.5.2
 Werkzeug==0.11.10
 click==6.6
+decorator==4.0.10
 itsdangerous==0.24
+pbr==1.10.0
+six==1.10.0
+sqlalchemy-migrate==0.10.0
+sqlparse==0.1.19
