--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 Flask==0.11.1
 Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 Jinja2==2.8
 MarkupSafe==0.23
 SQLAlchemy==1.0.14
 Tempita==0.5.2
+WTForms==2.1
 Werkzeug==0.11.10
 click==6.6
 decorator==4.0.10
