add wtforms for html 5 input

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,15 @@ MarkupSafe==0.23
 SQLAlchemy==1.0.14
 Tempita==0.5.2
 WTForms==2.1
+WTForms-Components==0.10.0
 Werkzeug==0.11.10
 click==6.6
 decorator==4.0.10
+infinity==1.4
+intervals==0.8.0
 itsdangerous==0.24
 pbr==1.10.0
 six==1.10.0
 sqlalchemy-migrate==0.10.0
 sqlparse==0.1.19
+validators==0.10.3
